--- a/Views/AnswerCards/LoadGame.cshtml
+++ b/Views/AnswerCards/LoadGame.cshtml
@@ -1,6 +1,6 @@
 ﻿
     <div class="container" style="height: 70vh;">
         <div class="col-md-12 text-center align-items-center">
-            <a class="btn btn-success" asp-controller="AnswerCards" asp-action="PlayGame">Start Game</a>
+            <a class="btn btn-success btn-lg" asp-controller="AnswerCards" asp-action="PlayGame">Start Game</a>
         </div>
     </div>
