--- a/Views/AnswerCards/PlayGame.cshtml
+++ b/Views/AnswerCards/PlayGame.cshtml
@@ -5,22 +5,24 @@
 }
     <div class="container align-items-center justify-content-center">
         <div class="row justify-content-center">
-            <h2 class="card text-center flex-wrap" style="width: 30rem; height: 10rem; padding: 1em;">@Model.roundQuestionCard.Description</h2>
+            <h2 class="card text-center flex-wrap" style="width: 30rem; height: 13rem; padding: 1em;">@Model.roundQuestionCard.Description</h2>
         </div>
-        <br/>
+        <br />
         <div class="row justify-content-between">
+            @foreach (AnswerCard card in Model.roundAnswerCards)
+            {
+
             <div>
-                <h1 class="text-center">Player 1</h1>
-                <h2 class="card text-center flex-wrap" style="width: 18rem; height: 15rem; padding: 1em;">@Model.playerOneCard.Description</h2>
+                <h1 class="text-center">Player</h1>
+                <h2 class="card text-center flex-wrap" style="width: 18rem; height: 15rem; padding: 1em;">@card.Description</h2>
+                <div class="container">
+                    <div class="col-md-12 text-center align-items-center">
+                        <a class="btn btn-primary align-items-center" asp-controller="AnswerCards" asp-action="PlayNextRound" asp-route-cardPointValue="@card.PointValue">Vote!</a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h1 class="text-center">Player 2</h1>
-                <h2 class="card text-center flex-wrap" style="width: 18rem; height: 15rem; padding: 1em;">@Model.playerTwoCard.Description</h2>
-            </div>
-            <div>
-                <h1 class="text-center">Player 3</h1>
-                <h2 class="card text-center flex-wrap" style="width: 18rem; height: 15rem; padding: 1em;">@Model.playerThreeCard.Description</h2>
-            </div>
+            }
         </div>
+
     </div>
 
