--- a/Views/AnswerCards/PlayGame.cshtml
+++ b/Views/AnswerCards/PlayGame.cshtml
@@ -9,11 +9,12 @@
         </div>
         <br />
         <div class="row justify-content-between">
+            @{int i = 1; }
             @foreach (AnswerCard card in Model.roundAnswerCards)
             {
 
             <div>
-                <h1 class="text-center">Player</h1>
+                <h1 class="text-center">Player @i</h1>
                 <h2 class="card text-center flex-wrap" style="width: 18rem; height: 15rem; padding: 1em;">@card.Description</h2>
                 <div class="container">
                     <div class="col-md-12 text-center align-items-center">
@@ -21,6 +22,7 @@
                     </div>
                 </div>
             </div>
+                i++;
             }
         </div>
 
