working on styling

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,11 +8,26 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <div class="text-center">
+    <div class="container text-center">
         <h1 class="display-4">Welcome, @User.Identity.Name!</h1>
-        <div>
-            <a class="btn btn-primary btn-lg align-items-center" asp-controller="AnswerCards" asp-action="LoadGame">Collect Points!</a>
-            <a class="btn btn-secondary btn-lg align-items-center" asp-controller="Decks" asp-action="Index">Visit the Store!</a>
+        <br />
+        <br />
+        <br />
+        <br />
+        <div class="justify-content-around" style="display: flex;">
+            <a class="btn btn-primary align-items-center" asp-controller="AnswerCards" asp-action="LoadGame" style="width: 14em; height: 12em;">
+                <div>
+                    <h3>Collect Points!</h3>
+                    <img src="https://i.imgur.com/mKpKosO.gif" alt="coins" style="width: 65%;"/>
+                </div>
+            </a>
+            <h2 class="align-items-center">~ OR ~</h2>
+            <a class="btn btn-secondary align-items-center" asp-controller="Decks" asp-action="Index" style="width: 14em; height: 12em;">
+                <div>
+                    <h3>Visit the Store!</h3>
+                    <img src="https://media1.tenor.com/images/455d82b6ba7423c156be9cf42ba7dfd9/tenor.gif?itemid=16826559" alt="store" style="width: 68%; border-radius: 1em;" />
+                </div>
+            </a>
         </div>
     </div>
 }
