--- a/Views/Shared/Components/ScoreCount/Default.cshtml
+++ b/Views/Shared/Components/ScoreCount/Default.cshtml
@@ -1,3 +1,5 @@
 ﻿@model CardGame.ViewComponents.ScoreCountViewModel
 
-<span href="#">Total Points: (@Model.ScoreCount)</span>
+    <p>
+        <span href="#">Total Points: @Model.ScoreCount</span>
+    </p>
