--- a/Views/AnswerCards/EndOfGame.cshtml
+++ b/Views/AnswerCards/EndOfGame.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "EndOfGame";
 }
 
-    <div class="container">
+    @*<div class="container">
         <div class="text-center">
             <h1>Congratulations!</h1>
             <h4>You have won @ViewData["gameTotal"] points!</h4><br/>
@@ -13,27 +13,23 @@
                 <a class="btn btn-outline-success" asp-controller="Decks" asp-action="Index">Visit Store</a>
             </div>
         </div>
-    </div>
+    </div>*@
+<button type="button" data-toggle="modal" data-target="#myModal">Open Modal</button>
 
-@*<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria- labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria- labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;    </button>
-                <h2 class="modal-title" id="myModalLabel">Congratualations!</h2>
+            <div class="modal-body text-center">
+                <h1>Congratulations!</h1>
+                <h4>You have won @ViewData["gameTotal"] points!</h4><br />
             </div>
-            <div class="modal-body">
-                <h4>You won @ViewData["gameTotal"] points!</h4>
+            <div class="modal-footer">
                 <div class="col-md-12 text-center align-items-center">
-                    <a class="btn btn-outline-primary" asp-controller="AnswerCards" asp-action="PlayGame">Play Again</a>
+                    <a class="btn btn-outline-primary" asp-controller="AnswerCards" asp-action="LoadGame">Play Again</a>
                     <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Home</a>
                     <a class="btn btn-outline-success" asp-controller="Decks" asp-action="Index">Visit Store</a>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
         </div>
     </div>
-</div>*@
+</div>
