--- a/Views/Decks/Index.cshtml
+++ b/Views/Decks/Index.cshtml
@@ -13,11 +13,38 @@
         @foreach (Deck deck in Model)
         {
             <div style="margin-bottom: 1em;">
-                <h2 class="card text-center flex-wrap" style="width: 18rem; height: 20rem; padding: 1em;">@deck.Name</h2>
+                <h2 class="card text-center flex-wrap" style="width: 16rem; height: 18rem; padding: 1em;">@deck.Name</h2>
                 <h4 class="text-center flex-wrap">@deck.Price points</h4>
                 <div class="container">
                     <div class="col-md-12 text-center align-items-center">
-                        <a class="btn btn-primary align-items-center" asp-controller="Decks" asp-action="PurchaseDeck" asp-route-deckId="@deck.DeckId" asp-route-deckValue="@deck.Price">Purchase!</a>
+                        <a class="btn btn-primary align-items-center" asp-controller="Decks" asp-action="PurchaseDeck" asp-route-deckId="@deck.DeckId" asp-route-deckValue="@deck.Price" data-toggle="modal" data-target="#PurchaseModal">Purchase!</a>
+
+                        <div class="modal fade" id="PurchaseModal" tabindex="-1" role="dialog" aria- labelledby="PurchaseModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    @if (@ViewBag.totalScore < @deck.Price)
+                                    {
+                                        <div class="modal-body text-center">
+                                            <h1>Sorry! You don't have enough points to purchase this deck.</h1>
+                                            <h3>Play more rounds to earn more points to buy this fun deck!</h3>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="modal-body text-center">
+                                            <h1>Succefully Added!</h1>
+                                            <h3>You bought a new deck! Go play a game to get a chance to see your new cards</h3>
+                                        </div>
+                                    }
+                                    <div class="modal-footer">
+                                        <div class="col-md-12 text-center align-items-center">
+                                            <a class="btn btn-outline-primary" asp-controller="AnswerCards" asp-action="LoadGame">Earn more Points!</a>
+                                            <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Return Home</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -25,33 +52,3 @@
     </div>
 </div>
 
-@*<table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Price)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-    @foreach (var item in Model) {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.DeckId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.DeckId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.DeckId">Delete</a>
-                </td>
-            </tr>
-    }
-        </tbody>
-    </table>*@
