--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
                         <img style="width: 20%; height: auto;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRMApjZlivZ2eTJ91_6T3wMJbzzCN6tnWOBPg&usqp=CAU" alt="Profile!">
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">My Profile</a>
+                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a>
                         <a class="dropdown-item" href="#">Help</a>
                         <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         <div class="dropdown-divider"></div>
