--- a/Views/Decks/Index.cshtml
+++ b/Views/Decks/Index.cshtml
@@ -17,9 +17,9 @@
                 <h4 class="text-center flex-wrap">@deck.Price points</h4>
                 <div class="container">
                     <div class="col-md-12 text-center align-items-center">
-                        <a class="btn btn-primary align-items-center" asp-controller="Decks" asp-action="PurchaseDeck" asp-route-deckId="@deck.DeckId" asp-route-deckValue="@deck.Price" data-toggle="modal" data-target="#PurchaseModal">Purchase!</a>
+                        <a class="btn btn-primary align-items-center" asp-controller="Decks" asp-action="PurchaseDeck" asp-route-deckId="@deck.DeckId" asp-route-deckValue="@deck.Price">Purchase!</a>
 
-                        <div class="modal fade" id="PurchaseModal" tabindex="-1" role="dialog" aria- labelledby="PurchaseModalLabel" aria-hidden="true">
+                        @*<div class="modal fade" id="PurchaseModal" tabindex="-1" role="dialog" aria- labelledby="PurchaseModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     @if (@ViewBag.totalScore < @deck.Price)
@@ -44,7 +44,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
