styling, and purchase fix

--- a/Views/AnswerCards/EndOfGame.cshtml
+++ b/Views/AnswerCards/EndOfGame.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "EndOfGame";
 }
     <div class="container">
-        <div style="background:url(https://i.pinimg.com/originals/e5/83/3e/e5833e1bea7d379f0f4e4ae250b7cf81.gif); height: 70vh;">
-            <img src="https://i.pinimg.com/originals/e5/83/3e/e5833e1bea7d379f0f4e4ae250b7cf81.gif" alt="confetti" style="height: 10em; opacity: 0.1;">
+        <div style="background:url(https://media1.giphy.com/media/3ohhwzIw3bISRhQWME/giphy.gif); height: 70vh;">
+            <img src="https://media1.giphy.com/media/3ohhwzIw3bISRhQWME/giphy.gif" alt="confetti" style="height: 10em; opacity: 0.1;">
             <div class="text-center">
                 <h1>Congratulations!</h1>
                 <h4>You have won @ViewData["gameTotal"] points!</h4><br />
