--- a/Views/AnswerCards/PlayGame.cshtml
+++ b/Views/AnswerCards/PlayGame.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container align-items-center justify-content-center">
     <div class="row justify-content-center">
-        <h2 class="card text-center flex-wrap rotate-vert-center" style="width: 30rem; height: 13rem; padding: 1em;">@Model.roundQuestionCard.Description</h2>
+        <h2 class="card text-center flex-wrap rotate-vert-center bc" style="width: 30rem; height: 13rem; padding: 1em;">@Model.roundQuestionCard.Description</h2>
     </div>
     <br />
     <div class="row justify-content-between">
@@ -14,8 +14,8 @@
         @foreach (AnswerCard card in Model.roundAnswerCards)
         {
             <div>
-                <h2 class="text-center">Player @i</h2>
-                <h3 class="card text-center flex-wrap slide-up" style="width: 18rem; height: 15rem; padding: 1em;">@card.Description</h3>
+                <h2 class="text-center" style="color: cornsilk;">Player @i</h2>
+                <h3 class="card text-center flex-wrap slide-up wc" style="width: 18rem; height: 15rem; padding: 1em;">@card.Description</h3>
                 <div class="container">
                     <div class="col-md-12 text-center align-items-center">
                         <a class="btn btn-primary align-items-center slide-up" asp-controller="AnswerCards" asp-action="PlayNextRound" asp-route-cardPointValue="@card.PointValue">Vote!</a>
