--- a/Views/Shared/Components/ScoreCount/Default.cshtml
+++ b/Views/Shared/Components/ScoreCount/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@model CardGame.ViewComponents.ScoreCountViewModel
 
-    <p>
+    <p style="color: white;">
         <span href="#">Total Points: @Model.ScoreCount</span>
     </p>
