--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -27,16 +27,16 @@
         else
         {
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                <li class="nav-item topnav">
+                    <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                    <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
                 </li>
             </ul>
             <ul class="navbar-nav flex-grow-1">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                <li class="nav-item topnav">
+                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
             </ul>
             
