added tooltip, editing url, and created README

--- a/Views/Home/Help.cshtml
+++ b/Views/Home/Help.cshtml
@@ -2,73 +2,9 @@
     ViewData["Title"] = "Help Page";
 }
 
-    <div class="container accordionContainer">
-        <div id="accordion">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h5 class="mb-0 d-inline">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            How to Play
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body" id="child1">
-                        <div class="card">
-                            <div class="card-header">
-                                <a href="#" data-toggle="collapse" data-target="#collapseOneA">Collect Points</a>
-                            </div>
-                            <div class="card-body collapse" data-parent="#child1" id="collapseOneA">
-                                Crunch wolf moon tempor, sunt aliqua put a bird.
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header">
-                                <a href="#" data-toggle="collapse" data-target="#collapseOneB">Visit the Store</a>
-                            </div>
-                            <div class="card-body collapse" data-parent="#child1" id="collapseOneB">
-                                Another flipp runch wolf moon tempor, sunt aliqua put a bird.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed btn-outline-info" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            How to Purchase a Deck
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                        raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            About the Bots
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                        raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<h2 class="text-center"><em>"HELP"<br/> <small>The bots are overwhelming me!</small></em></h2><br/>
 
-    <div class="container">
+    <div class="accordionContainer" style="width: 70%; margin-left: 15%">
         <div id="accordion" class="panel-group">
             <div class="panel">
                 <div class="panel-heading">
@@ -77,29 +13,35 @@
                     </h4>
                 </div>
                 <div id="panelBodyOne" class="panel-collapse collapse in">
-                    <div class="panel-body">
-                        <p>Energistically drive standardized communities through user friendly results. Phosfluorescently initiate superior technologies vis-a-vis low-risk high-yield solutions. Objectively facilitate clicks-and-mortar partnerships vis-a-vis superior partnerships. Continually generate long-term high-impact methodologies via wireless leadership. Holisticly seize resource maximizing solutions via user friendly outsourcing.</p>
+                    <div class="panel-body text-center">
+                        <p>Bots Against Humanity is a card game application that closely resembles the popular card game 'Cards Against Humanity' except that instead of human players, I've elected to have automated players.<br/>
+                        If you've never played Cards Against Humanity before, here's how it works. There are 2 decks- question cards (black) and answer cards (white). During each round, a question card is drawn and players must submit an appropriate answer card from their hand.
+                        At the end of the round, the funniest or most appropriate answer card will be voted on and the player that played that card will receive a point. <br/> Similarly, in Bots Against Humanity,
+                        I have a game made up of 5 rounds, and in each round, 3 automated players will be submiting an answer card (selected from the answer card selection the user has in their possession) in response to a randomly generated question card. In this application, some cards have different point values depending on what deck they are from and the value of the deck.
+                        At the end of the game, the user will receive a notification letting them now of how many points they've earned and the total will be added to their overall score.</p>
                         <div class="panel">
                             <div class="panel-heading">
-                                <h6 class="panel-title text-center">
+                                <h6 class="panel-title">
                                     <a href="#panelBodyOneA" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Collect Points</a>
                                 </h6>
                             </div>
                             <div id="panelBodyOneA" class="panel-collapse collapse in">
-                                <div class="panel-body">
-                                    <p>Energistically drive standardized communities through user friendly results. Phosfluorescently initiate superior technologies vis-a-vis low-risk high-yield solutions. Objectively facilitate clicks-and-mortar partnerships vis-a-vis superior partnerships. Continually generate long-term high-impact methodologies via wireless leadership. Holisticly seize resource maximizing solutions via user friendly outsourcing.</p>
+                                <div class="panel-body text-center">
+                                    <p>In order to start playing the game, you have to click on the 'Collect Points' button on the home page. <br/> After creating an account, a new user will be provided with a starter deck of cards with each card being worth 1 point each.
+                                    Users will be able to collect points after completing games and with enough points, they will be able to visit the store to purchase a new card deck with their points.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="panel">
                             <div class="panel-heading">
-                                <h6 class="panel-title text-center">
+                                <h6 class="panel-title">
                                     <a href="#panelBodyOneB" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Visit the Store</a>
                                 </h6>
                             </div>
                             <div id="panelBodyOneB" class="panel-collapse collapse in">
-                                <div class="panel-body">
-                                    <p>Energistically drive standardized communities through user friendly results. Phosfluorescently initiate superior technologies vis-a-vis low-risk high-yield solutions. Objectively facilitate clicks-and-mortar partnerships vis-a-vis superior partnerships. Continually generate long-term high-impact methodologies via wireless leadership. Holisticly seize resource maximizing solutions via user friendly outsourcing.</p>
+                                <div class="panel-body text-center">
+                                    <p>Visit the Store to purchase more card decks! By purchasing more decks, a user will be able to add more diverse cards to their answer card collection that the automated players will be choosing from. Also, the more points a deck costs
+                                    to purchase, the higher the point value of the 5 cards in the deck. </p>
                                 </div>
                             </div>
                         </div>
@@ -113,8 +55,11 @@
                     </h4>
                 </div>
                 <div id="panelBodyTwo" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        <p>Energistically drive standardized communities through user friendly results. Phosfluorescently initiate superior technologies vis-a-vis low-risk high-yield solutions. Objectively facilitate clicks-and-mortar partnerships vis-a-vis superior partnerships. Continually generate long-term high-impact methodologies via wireless leadership. Holisticly seize resource maximizing solutions via user friendly outsourcing.</p>
+                    <div class="panel-body text-center">
+                        <p>
+                            <br /> When the user has enough points to purchase a deck, a blue button with "Purchase!" will be displayed under each deck that the user has enough points to purchase. If there is no "Purchase!" button under a deck, the user does not have enough points to purchase that deck. <br /> After purchasing a deck,
+                            the deck will disappear from the store view because being able to re-purchase a deck would cause duplicate answer cards in the user's card collection, which may dampen the fun of the game.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -125,8 +70,34 @@
                     </h4>
                 </div>
                 <div id="panelBodyThree" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        <p>Energistically drive standardized communities through user friendly results. Phosfluorescently initiate superior technologies vis-a-vis low-risk high-yield solutions. Objectively facilitate clicks-and-mortar partnerships vis-a-vis superior partnerships. Continually generate long-term high-impact methodologies via wireless leadership. Holisticly seize resource maximizing solutions via user friendly outsourcing.</p>
+                    <div class="panel-body text-center">
+                        <p>The 3 automated players or the little robots want to keep their anonymity during the game because they know how strongly bias plays a role in human decisions.
+                        However, it seems unfair to not give them the credit they are due, so I would love nothing more than to introduce the 3 dedicated little bots working hard to make you laugh!</p>
+                        <div class="container">
+                            <div class="row justify-content-between">
+                                <div class="card" style="width: 12rem;">
+                                    <img src="https://media3.giphy.com/media/3og0IUzdgwVczU67eg/giphy.gif" class="card-img-top" alt="hHarpBot">
+                                    <div class="card-body text-black-50">
+                                        <h5 class="card-title">Harper</h5>
+                                        <p class="card-text">Harper is positive ray of light that is working hard trying to develop a sense of humor!</p>
+                                    </div>
+                                </div>
+                                <div class="card" style="width: 12rem;">
+                                    <img src="https://cdn.dribbble.com/users/437210/screenshots/2030009/loading.gif" class="card-img-top" alt="lennoxBot">
+                                    <div class="card-body text-black-50">
+                                        <h5 class="card-title">Lennox</h5>
+                                        <p class="card-text" style="font-size:small;">Lennox is a smart lil machine that likes to approach missions in a logical and pragmatic manner, but admits that it wants to be a stand-up comedian after growing up.</p>
+                                    </div>
+                                </div>
+                                <div class="card" style="width: 12rem;">
+                                    <img src="https://thumbs.gfycat.com/UnripeAdoredGrayreefshark-size_restricted.gif" class="card-img-top" alt="SawyerBot" style="width:83%;">
+                                    <div class="card-body text-black-50">
+                                        <h5 class="card-title">Sawyer</h5>
+                                        <p class="card-text">Sawyer is a young lil bot full of the energy and spontaneity needed to keep up with a human card game.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
